# profile.mobile.platform.core.uifw.e-mod-tizen-qpmgr

./: Makefile.am  autogen.sh  configure.ac
packaging/: e-mod-tizen-qpmgr.spec
src/: Makefile.am  cscope.out  e_mod_indicator.c  e_mod_main.c  e_mod_main.h  e_mod_quickpanel.c  e_mod_quickpanel_server.c  quickpanel-client-protocol.h  quickpanel-protocol.c  quickpanel-server-protocol.h  quickpanel.xml
